{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 216,
  "lineage": "d3352a48-fb97-f8a7-b9cb-ce37b81c7388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:820684557528:instance/i-007ccf5b9a988b352",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-007ccf5b9a988b352",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-015e0c4dce0f276e3",
            "private_dns": "ip-10-0-0-171.eu-west-2.compute.internal",
            "private_ip": "10.0.0.171",
            "public_ip": "3.8.85.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0b9e61ee329c8a499",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030042ecdc746dbc1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c2e3f15098de12d"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07fca0b9270aea305",
            "owner_id": "820684557528",
            "vpc_id": "vpc-01f3d679d0b822789"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b8904a69ed8c6d",
            "original_route_table_id": "rtb-03203406adfd95476",
            "route_table_id": "rtb-015ff036e11c051a9",
            "vpc_id": "vpc-01f3d679d0b822789"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-015ff036e11c051a9",
            "owner_id": "820684557528",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fca0b9270aea305",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01f3d679d0b822789"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:820684557528:security-group/sg-05c2e3f15098de12d",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c2e3f15098de12d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "820684557528",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01f3d679d0b822789"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:820684557528:subnet/subnet-030042ecdc746dbc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-030042ecdc746dbc1",
            "map_public_ip_on_launch": false,
            "owner_id": "820684557528",
            "vpc_id": "vpc-01f3d679d0b822789"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:820684557528:vpc/vpc-01f3d679d0b822789",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a0822f3dd8a418d",
            "default_route_table_id": "rtb-03203406adfd95476",
            "default_security_group_id": "sg-06584cecfdada961d",
            "dhcp_options_id": "dopt-fc9bdc94",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01f3d679d0b822789",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03203406adfd95476",
            "owner_id": "820684557528"
          }
        }
      ]
    }
  ]
}